--- a/test7.html
+++ b/test7.html
@@ -208,8 +208,11 @@
 <section id="contact">
   <h2>Contact Us</h2>
  <form action="https://formsubmit.co/smart_ashok@hotmail.com" method="POST">
+<label for="name">Full Name:</label>
      <input type="text" name="name" required>
+<label for="email">Email:</label>
      <input type="email" name="email" required>
+<label for="Submit">Submit:</label>
      <button type="submit">Send</button>
 </form>
 </section>
