--- a/test7.html
+++ b/test7.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=2.0">
-<title>Empower HandsOn Therapy</title>
+<title><h1>Empower HandsOn Therapy</h1></title>
 <style>
   body {
     font-family: 'Poppins', sans-serif;
@@ -223,4 +223,5 @@
 
 </body>
 </html>
+
 
