--- a/test7.html
+++ b/test7.html
@@ -14,14 +14,14 @@
   }
 
   header {
-    background: url('PainManagementSoln.jpg') center/cover no-repeat;
+    background: url('PainMangementSoln.jpg') center/cover no-repeat;
     color: white;
     text-align: center;
     padding: 120px 20px;
   }
 
   header h1 {
-    font-size: 8em;
+    font-size: 14em;
     margin: 0;
   }
 
@@ -223,5 +223,6 @@
 
 </body>
 </html>
+
 
 
