--- a/test7.html
+++ b/test7.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=2.0">
-<title><h1>Empower HandsOn Therapy</h1></title>
+<title>Empower HandsOn Therapy</title>
 <style>
   body {
     font-family: 'Poppins', sans-serif;
@@ -21,7 +21,7 @@
   }
 
   header h1 {
-    font-size: 14em;
+    font-size: 9em;
     margin: 0;
   }
 
@@ -223,6 +223,7 @@
 
 </body>
 </html>
+
 
 
 
